<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.LoginActivity"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            android:paddingHorizontal="30dp"
            android:layout_marginTop="40dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selamat_datang"
                android:textSize="28sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masuk_kembali_ke_akun_anda"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_form_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingHorizontal="30dp"
            android:gravity="center_horizontal"
            android:background="@drawable/login_container_form"
            android:layout_marginHorizontal="30dp"
            android:paddingVertical="40dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masuk_pengguna"
                android:layout_gravity="start"
                android:textSize="25sp"
                android:textColor="@color/white"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:shapeAppearance="?attr/shapeAppearanceCornerMedium"
                android:hint="@string/nama_pengguna"
                app:boxStrokeColor="@drawable/text_input_layout_stroke_white"
                app:hintTextColor="@color/white"
                android:textColorHint="@color/white">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:shapeAppearance="?attr/shapeAppearanceCornerMedium"
                app:boxStrokeColor="@drawable/text_input_layout_stroke_white"
                app:hintTextColor="@color/white"
                android:textColorHint="@color/white"
                android:hint="@string/kata_sandi">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/submit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ThemeOverlay.Material3.Button.ElevatedButton"
                app:shapeAppearance="?attr/shapeAppearanceCornerLarge"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:layout_marginHorizontal="20dp"
                android:text="@string/masuk"/>
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintBottom_toTopOf="@id/container_form_layout"
            app:layout_constraintEnd_toEndOf="@id/container_form_layout"
            android:layout_marginBottom="-60dp"
            app:cardCornerRadius="100dp"
            app:strokeWidth="0dp">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_icon"
                android:contentDescription="@string/app_name"
                android:layout_gravity="center"/>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
