<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ProfileActivity"
    android:fitsSystemWindows="true"
    android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:background="@drawable/profile_appbar_layout_background"
            tools:ignore="UselessParent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.google.android.material.appbar.AppBarLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="@android:color/transparent">
                    <com.google.android.material.appbar.MaterialToolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:titleTextColor="@color/white"/>


                </com.google.android.material.appbar.AppBarLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatar"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:src="@drawable/ic_icon"
                android:contentDescription="@string/profile"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eugene_feilian_putra_rangga"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_marginTop="30dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile_developer_web_developer"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/portfolio_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/https_eugenefeilianputrarangga_vercel_app_underline"
                android:textColor="@color/white"
                />
        </LinearLayout>

        <ImageView
            android:id="@+id/github_imageview"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_github"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/github"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>